fix: update color in Suport.css for improved visibility; remove warranty feature from paesaniProducts

--- a/src/pages/Suport/Suport.css
+++ b/src/pages/Suport/Suport.css
@@ -36,7 +36,7 @@
         text-align: center;
         font-size: 1.5rem;
         font-weight: 600;
-        color: var(--color1);
+        color: var(--color2);
         margin-bottom: 20px;
         margin-top: 20px;
     }
